--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
   <li><a style="float:right;" href="about.asp">Videos</a></li>
   </div>
 </ul>
-<h1>Learn HTML</h1>
+<h1 style="text-align:left;" >Learn HTML</h1>
 </body>
 </html>
