--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
 <title>Learn To Code HTML</title>
 </head>
 <body>
-<ul>
-  <div id="Bar">
+<ul id="bar">
   <li><a href="default.asp">Home</a></li>
   <li><a href="contact.asp">Contact Us</a></li>
-  </div>
-  <div id="videos">
   <li><a style="float:right;" href="about.asp">Videos</a></li>
-  </div>
 </ul>
 <h1>Learn HTML</h1>
 <p>Learn Html Form The Ground Up With Coding For Everyone</p>
+<ul id="socials">
+<a href="https://plus.google.com/share?url=http://carsonandrew2.github.io/code-for-all" onclick="javascript:window.open(this.href,
+  '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;"><img
+  src="1460773369_googleplus.png"></a>
+</ul>
 </body>
 </html>
