--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <ul id="bar">
   <li><a href="default.asp">Home</a></li>
   <li><a href="contact.asp">Contact Us</a></li>
+  <div id="videos">
   <li><a style="float:right;" href="about.asp">Videos</a></li>
+  </div>
 </ul>
 <h1>Learn HTML</h1>
 <p>Learn Html Form The Ground Up With Coding For Everyone</p>
