--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 </ul>
 <h1>Learn HTML</h1>
 <p>Learn Html Form The Ground Up With Coding For Everyone</p>
-<div class="slide" style="background-color:#333;">
-  <h1>Testing 123</h1>
+<div id="slide" class="slide">
+  <h1>Look For These Buttons to "Look Behind The Scenes" and See How We Built Our Site</h1>
+  <button type="button">Look Behind The Scenes/button>
 </div> 
 </body>
 </html>
