--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <p>Learn Html Form The Ground Up With Coding For Everyone</p>
 <div id="slide" class="slide">
   <h1>Look For These Buttons to "Look Behind The Scenes" and See How We Built Our Site</h1>
-  <button type="button">Look Behind The Scenes/button>
+  <button type="button">Look Behind The Scenes</button>
 </div> 
 </body>
 </html>
