--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 </ul>
 <h1>Learn HTML</h1>
 <p>Learn Html Form The Ground Up With Coding For Everyone</p>
+<div id="button">
   <h1>Look For These Buttons to "Look Behind The Scenes" and See How We Built Our Site</h1>
-  <button type="button">Look Behind The Scenes</button>
+ <form action="look.html">
+   <input type="submit" id="look">Look Behind The Scenes</input>
+   </div>
+ </form>
 </body>
 </html>
