--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div id="button">
   <h1>Look For These Buttons to "Look Behind The Scenes" and See How We Built Our Site</h1>
  <form action="look.html">
-   <input type="submit" id="look">Look Behind The Scenes</input>
+   <input type="submit" id="look" value="Look Behind The Scenes">
    </div>
  </form>
 </body>
