--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
  <form action="look.html">
    <input type="submit" id="look" value="Look Behind The Scenes">
    </div>
+   <div id="youtube">
+  <h2>Check Out Our YouTube Channel Here</h2>
+   </div>
  </form>
 </body>
 </html>
