--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link href="index.css" rel="stylesheet" />>
+<link href="index.css" rel="stylesheet" />
+<link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
 <title>Learn To Code HTML</title>
 </head>
 <body>
