--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
   <li><a style="float:right;" href="about.asp">Videos</a></li>
   </div>
 </ul>
+<div id="title">
 <h1>Learn HTML</h1>
 <p>Learn Html Form The Ground Up With Coding For Everyone</p>
+</div>
 <div id="button">
   <h1>Look For These Buttons to "Look Behind The Scenes" and See How We Built Our Site</h1>
  <form action="look.html">
