--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <li><a style="float:right;" href="about.asp">Videos</a></li>
   </div>
 </ul>
-<div id="title">
+<div id="image">
 <h1>Learn HTML</h1>
 <p>Learn Html Form The Ground Up With Coding For Everyone</p>
 </div>
