--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link href="index.css" rel="stylesheet" />
-<link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
+<link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/ >
 <title>Learn To Code HTML</title>
 </head>
 <body>
