--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
  <form action="look.html">
    <input type="submit" id="look" value="Look Behind The Scenes">
    </div>
+   <div id="box">
    <div id="HTML">
    style="color:brown">!DOCTYPE</span> <span style="color:red">html</span><span style="color:blue">&gt;</span><br>
     <span style="color:blue">&lt;</span><span style="color:brown">html</span><span style="color:blue">&gt;</span><br>
@@ -31,6 +32,7 @@
     <span style="color:blue">&lt;</span><span style="color:brown">p</span><span style="color:blue">&gt;</span>This is a paragraph.<span style="color:blue">&lt;</span><span style="color:brown">/p</span><span style="color:blue">&gt;</span><br><br>
     <span style="color:blue">&lt;</span><span style="color:brown">/body</span><span style="color:blue">&gt;</span><br>
     <span style="color:blue">&lt;</span><span style="color:brown">/html</span><span style="color:blue">&gt;</span>
+   </div>
    </div>
    <div id="youtube">
   <h2>Check Out Our YouTube Channel Here</h2>
