--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
    </div>
    <div id="box">
    <div id="HTML">
-   style="color:brown">!DOCTYPE</span> <span style="color:red">html</span><span style="color:blue">&gt;</span><br>
+   <span style="color:brown">!DOCTYPE</span> <span style="color:red">html</span><span style="color:blue">&gt;</span><br>
     <span style="color:blue">&lt;</span><span style="color:brown">html</span><span style="color:blue">&gt;</span><br>
     <span style="color:blue">&lt;</span><span style="color:brown">title</span><span style="color:blue">&gt;</span>HTML Tutorial<span style="color:blue">&lt;</span><span style="color:brown">/title</span><span style="color:blue">&gt;</span><br>
     <span style="color:blue">&lt;</span><span style="color:brown">body</span><span style="color:blue">&gt;</span><br><br>
